--- a/css/years.css
+++ b/css/years.css
@@ -43,3 +43,7 @@ a.active {
 .sidenav-overlay {
   left: 300px;
 }
+
+.video-container {
+  z-index: -1;
+}
